# KuiklyMMKV

./: .gitignore  LICENSE  README.md  build.gradle.kts  build.ohos.gradle.kts  gradle.properties  settings.gradle.kts  settings.ohos.gradle.kts
androidApp/: build.gradle.kts
buildSrc/src/main/java/: KotlinBuildVar.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
iosApp/: Podfile
iosApp/iosApp/: ContentView.swift  KuiklyRenderViewPage.swift  iOSApp.swift
iosApp/iosApp.xcodeproj/: project.pbxproj
iosApp/iosApp/FDFullscreenPopGesture/: UINavigationController+FDFullscreenPopGesture.h  UINavigationController+FDFullscreenPopGesture.m
iosApp/iosApp/KuiklyExpand/: KuiklyRenderViewController.m
iosApp/iosApp/KuiklyExpand/Handler/: KRRouterHandler.h  KRRouterHandler.m  KuiklyRenderComponentExpandHandler.h  KuiklyRenderComponentExpandHandler.m
iosApp/iosApp/KuiklyExpand/Modules/: HRBridgeModule.h  HRBridgeModule.m
mmkvKotlin/: build.gradle.kts  build.ohos.gradle.kts  gradle.properties  mmkvKotlin.podspec
mmkvKotlin/src/nativeInterop/cinterop/: interop.def
ohosApp/: .gitignore  build-profile.json5  runOhosApp.sh
ohosApp/AppScope/: app.json5
ohosApp/entry/: build-profile.json5  oh-package.json5
ohosApp/mmkv_c_wrapper/: build-profile.json5  oh-package.json5
ohosApp/mmkv_c_wrapper/src/main/cpp/: CMakeLists.txt  mmkv_c_wrapper.cpp
ohosApp/mmkv_c_wrapper/src/main/cpp/include/: mmkv_c_wrapper.h
ohosApp/mmkv_c_wrapper/src/main/cpp/types/libentry/: oh-package.json5
shared/: build.gradle.kts  build.ohos.gradle.kts
(+25 files in other folders)
